--- a/package.json
+++ b/package.json
@@ -36,19 +36,35 @@
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.9",
-    "@storybook/builder-webpack4": "^6.5.9",
-    "@storybook/manager-webpack4": "^6.5.9",
+    "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
+    "@types/d3": "^7.4.0",
     "babel-loader": "^8.2.5",
+    "d3": "^5.16.0",
+    "html-webpack-plugin": "^5.5.0",
+    "less": "^3.13.1",
+    "less-loader": "^11.0.0",
     "parcel": "^2.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.7.4"
   },
+  "dependencies": {
+    "antd": "^4.22.3",
+    "d3-flextree": "^2.1.2",
+    "react-json-view": "^1.21.3"
+  },
   "peerDependencies": {
-    "react": "17",
-    "d3": "5"
+    "d3": "5",
+    "react": "17"
+  },
+  "overrides": {
+    "react-json-view": {
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0"
+    }
   },
   "alias": {
     "react": {
