--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/core": "^7.18.9",
     "@mdx-js/react": "^2.1.2",
     "@parcel/packager-ts": "^2.6.2",
+    "@parcel/transformer-less": "^2.6.2",
     "@parcel/transformer-typescript-types": "^2.6.2",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
@@ -52,6 +53,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "antd": "^4.22.3",
     "d3-flextree": "^2.1.2",
     "react-json-view": "^1.21.3"
