--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "visual plan"
   ],
   "main": "dist/index.js",
-  "types": "dist/types/index.d.ts",
+  "types": "dist/index.d.ts",
   "targets": {
     "main": {
       "source": "src/index.ts",
