--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "visual plan"
   ],
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/types.d.ts",
   "targets": {
     "main": {
       "source": "src/index.ts",
@@ -47,10 +47,10 @@
   "devDependencies": {
     "@babel/core": "^7.18.9",
     "@mdx-js/react": "^2.1.2",
-    "@parcel/packager-ts": "^2.6.2",
-    "@parcel/reporter-bundle-analyzer": "2.6.2",
-    "@parcel/transformer-less": "^2.6.2",
-    "@parcel/transformer-typescript-types": "^2.6.2",
+    "@parcel/packager-ts": "^2.7.0",
+    "@parcel/reporter-bundle-analyzer": "^2.7.0",
+    "@parcel/transformer-less": "^2.7.0",
+    "@parcel/transformer-typescript-types": "^2.7.0",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
@@ -65,7 +65,7 @@
     "html-webpack-plugin": "^5.5.0",
     "less": "^3.13.1",
     "less-loader": "^11.0.0",
-    "parcel": "^2.6.2",
+    "parcel": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.7.4"
