docs: add args to storybook

--- a/package.json
+++ b/package.json
@@ -62,6 +62,10 @@
     "@storybook/testing-library": "^0.0.13",
     "@types/d3": "^7.4.0",
     "babel-loader": "^8.2.5",
+    "body-parser": "^1.20.0",
+    "boolbase": "^1.0.0",
+    "boxen": "^7.0.0",
+    "bplist-parser": "^0.3.2",
     "d3": "^7.6.1",
     "html-webpack-plugin": "^5.5.0",
     "less": "^3.13.1",
